# IPK2017

./: .gitignore
uebung01/: fib.cc  quadratgleichung.cc  uebung01
uebung02/: main  main.cc  main.cc~
uebung03/: ausgabe.txt  plot-hull (2).py  plot-hull.py  testOutput.txt
uebung04/: CMakeLists.txt  main.cc  statistics.hh
uebung04/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  statistics
uebung04/release/: CMakeCache.txt  Makefile  cmake_install.cmake  statistics
uebung05/01/: CMakeLists.txt  lint.cc  lint.hh  main.cc  testFail.txt  testSuccess.txt
uebung05/01/debug/: CMakeCache.txt  Makefile  checkparans  cmake_install.cmake
uebung05/02/: CMakeLists.txt  date.cc  date.hh  date.prep  main.cc  test
uebung05/02/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  date-test
uebung06/: .CMakeLists.txt.swp  CMakeLists.txt  canvas.cc  canvas.hh  main.cc  pngHelper.cc  pngHelper.hh  point.cc  point.hh
uebung06/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  pixel
uebung06/release/: CMakeCache.txt  Makefile  cmake_install.cmake  pixel
uebung07/: CMakeLists.txt  histogram.hh  main.cc  word.hh
uebung07/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  words
uebung07/release/: CMakeCache.txt  Makefile  cmake_install.cmake  words
uebung07_4/: CMakeLists.txt  histogram.cc  histogram.hh  main.cc
uebung08/: CMakeLists.txt  canvas.hh  main.cc  mandelbrot.cc  mandelbrot.hh  rgbhsl.hh
uebung09/: CMakeLists.txt  main.cc
